--- a/style.css
+++ b/style.css
@@ -47,7 +47,9 @@ body {
 	margin-top: 2px;
 	margin-right: auto;
 	margin-left: auto;
+}
 
+.bouncing {
 	-webkit-animation: bounce 750ms linear;
 	-moz-animation: bounce 750ms linear;
     animation: bounce 750ms linear;
@@ -61,6 +63,10 @@ body {
 	background-color: black;
 }
 
+.preview {
+	opacity: .25;
+}
+
 .end {
 	margin: 0px;
 	padding: 0px;
@@ -71,7 +77,7 @@ body {
 	transition: opacity 1s ease;
 }
 
-#message {
+.message {
 	position: absolute;
 	opacity: 0.90;
 	border-radius: 3%;
@@ -89,6 +95,23 @@ body {
 	font-size: 50px;
 	color: #fffff1;
 	text-align: center;
+}
+
+#button {
+	position: absolute;
+	opacity: 0.90;
+	background-color: #50a6c2;
+	box-shadow: 0 0 10px #50a6c2;
+	top: 375px;
+	height: 30px;
+	width: 150px;
+
+	font-size: 20px;
+}
+
+#button:hover{
+	background-color: #003f80;
+	box-shadow: 0 0 5px #003f80;
 }
 
 .hidden {
